Final Submission Commit

--- a/FinalSubmission.ipynb
+++ b/FinalSubmission.ipynb
@@ -467,41 +467,113 @@
       "cell_type": "code",
       "source": [
         "telescope = 18\n",
-        "prediction_steps = 3\n",
+        "steps = 3\n",
         "\n",
-        "num_samples = X_val.shape[0]\n",
-        "output_shape = (num_samples, telescope, 1)\n",
-        "predictions = np.zeros(output_shape)\n",
+        "#Initialize predictions array\n",
+        "predictions = np.zeros((X_val.shape[0], telescope, 1))\n",
         "\n",
-        "for step in range(0, telescope, prediction_steps):\n",
+        "for step in range(0, telescope, steps):\n",
+        "    #Predict 3 future samples from current data\n",
         "    next_prediction = model.predict(X_val)\n",
         "\n",
-        "    steps_to_copy = min(prediction_steps, telescope - step)\n",
-        "    predictions[:, step:step + steps_to_copy, :] = next_prediction[:, :steps_to_copy, :]\n",
+        "    #Append predicted samples to predictions\n",
+        "    predictions[:, step:step + steps, :] = next_prediction[:, :steps, :]\n",
         "\n",
-        "    if step + prediction_steps < telescope:\n",
-        "        X_val[:, :-steps_to_copy, :] = X_val[:, steps_to_copy:, :]\n",
-        "        X_val[:, -steps_to_copy:, :] = next_prediction[:, :steps_to_copy, :]"
+        "    #Append predicted samples to original data\n",
+        "    if step + steps < telescope:\n",
+        "        X_val[:, :-steps, :] = X_val[:, steps:, :]\n",
+        "        X_val[:, -steps:, :] = next_prediction[:, :steps, :]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "elsWuJ7yZWFC",
-        "outputId": "861b7720-7653-4f55-c923-457bc997760b"
+        "outputId": "ff2c5410-aa6d-46dc-bebf-51f8563b250a"
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2249/2249 [==============================] - 13s 5ms/step\n",
             "2249/2249 [==============================] - 11s 5ms/step\n",
-            "2249/2249 [==============================] - 14s 6ms/step\n",
-            "2249/2249 [==============================] - 13s 6ms/step\n",
+            "2249/2249 [==============================] - 15s 7ms/step\n",
+            "2249/2249 [==============================] - 12s 5ms/step\n",
+            "2249/2249 [==============================] - 12s 5ms/step\n",
             "2249/2249 [==============================] - 11s 5ms/step\n",
-            "2249/2249 [==============================] - 11s 5ms/step\n"
+            "2249/2249 [==============================] - 10s 4ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(predictions)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HgAwGVZHWe1-",
+        "outputId": "3fe656e1-3f5f-4f0e-d6d3-cdbedd297b94"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[0.50076216]\n",
+            "  [0.53719759]\n",
+            "  [0.54461455]\n",
+            "  ...\n",
+            "  [0.65780622]\n",
+            "  [0.65806603]\n",
+            "  [0.6583569 ]]\n",
+            "\n",
+            " [[0.80342454]\n",
+            "  [0.79508871]\n",
+            "  [0.73468471]\n",
+            "  ...\n",
+            "  [0.73937237]\n",
+            "  [0.74199927]\n",
+            "  [0.73468977]]\n",
+            "\n",
+            " [[0.6395402 ]\n",
+            "  [0.63972861]\n",
+            "  [0.62744766]\n",
+            "  ...\n",
+            "  [0.57271969]\n",
+            "  [0.56532019]\n",
+            "  [0.57939988]]\n",
+            "\n",
+            " ...\n",
+            "\n",
+            " [[0.5631566 ]\n",
+            "  [0.6033656 ]\n",
+            "  [0.60687071]\n",
+            "  ...\n",
+            "  [0.49963105]\n",
+            "  [0.45170957]\n",
+            "  [0.45906138]]\n",
+            "\n",
+            " [[0.50308168]\n",
+            "  [0.47351474]\n",
+            "  [0.50501978]\n",
+            "  ...\n",
+            "  [0.48827639]\n",
+            "  [0.51629734]\n",
+            "  [0.47707617]]\n",
+            "\n",
+            " [[0.55567968]\n",
+            "  [0.53010595]\n",
+            "  [0.55009258]\n",
+            "  ...\n",
+            "  [0.50692952]\n",
+            "  [0.52142692]\n",
+            "  [0.54744518]]]\n"
           ]
         }
       ]
